[tool.poetry]
name = "zemfrog-auth"
version = "1.0.1"
description = "Authentication for the zemfrog framework"
authors = ["aprilahijriyan <hijriyan23@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
zemfrog = "^5.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.urls]

Github = "https://github.com/zemfrog/zemfrog"
"Issue Tracker" = "https://github.com/zemfrog/zemfrog/issues"
Donation = "https://www.patreon.com/aprilahijriyan"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
